--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h1 class="titulo">
         MAIS FÁCIL, EFICIENTE, RÁPIDO, E GOSTOSO!
     </h1>
-    <div class="container"><a href="login.html"><input class="btn" type="button" value="Faça seu pedido"></a></div>
+    <div class="container"><a href="html/login.html"><input class="btn" type="button" value="Faça seu pedido"></a></div>
 </body>
 </html>
