Alterado para SCSS

--- a/html/login.html
+++ b/html/login.html
@@ -44,7 +44,7 @@
                     <input type="text" required placeholder="Ex: José Almeida">
                 </div>
                 <div class="submit-container">
-                    <button type="submit" class="btn-entrar">Fazer pedido</button>
+                    <button type="submit" class="btn-entrar"><a href="pedido.html">Fazer pedido</a></button>
                 </div>
                 <div class="register-noaccount">
                     <ipnut type="button" class="btn voltar"><img class="arrow" src="../img/back.png" alt=""> Voltar</ipnut>
