desenvolvendo tela dos pedidos

--- a/html/pedido.html
+++ b/html/pedido.html
@@ -19,31 +19,31 @@
         </li>
     </ul>
 
-    <div class="pedidos">
-        <div class="pedido">
+    <ul class="pedidos">
+        <li class="pedido">
             <h1>Ipsum</h1>
             <p>lorem</p>
             <input type="checkbox" name="" id="">
-        </div>
+        </li>
 
-        <div class="pedido">
+        <li class="pedido">
             <h1>Ipsum</h1>
             <p>lorem</p>
             <input type="checkbox" name="" id="">
-        </div>
+        </li>
 
-        <div class="pedido">
+        <li class="pedido">
             <h1>Ipsum</h1>
             <p>lorem</p>
             <input type="checkbox" name="" id="">
-        </div>
+        </li>
 
-        <div class="pedido">
+        <li class="pedido">
             <h1>Ipsum</h1>
             <p>lorem</p>
             <input type="checkbox" name="" id="">
-        </div>
-    </div>
+        </li>
+    </ul>
 
     <div class="observation">
         <div class="container">
