--- a/src/pages/confirmação.html
+++ b/src/pages/confirmação.html
@@ -10,7 +10,7 @@
 <body style="display: flex; align-content: center; justify-content: center;">
     <div style="display: flex; flex-direction: column;">
         <div style="width: 100vw; height: 55vh; display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center; gap: 30px;">
-            <img src="../img/check_circle_FILL0_wght400_GRAD0_opsz48 1 (1).png" alt="" width="250px" height="250px" style="background-color: #FF0000; border-radius: 50%;">
+            <img src="../../assets/check_circle_FILL0_wght400_GRAD0_opsz48 1 (1).png" alt="" width="250px" height="250px" style="background-color: #FF0000; border-radius: 50%;">
             <h1 style="font-size: 1.3rem; font-weight: bold;">Seu pedido foi enviado para a cozinha!</h1>
         </div>
         <button style="width: 300px; height: 50px; margin-top: 20%; align-self: center; border: none; background-color: #FF0000; font-size: 1.2rem; font-weight: bold; color: #fff;">Voltar para a tela inicial</button>
