--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedido</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="src/css/index.css">
 </head>
 <body id="bg">
-    <h1 class="titulo">
-        MAIS FÁCIL, EFICIENTE, RÁPIDO, E GOSTOSO!
-    </h1>
-    <div class="container"><a href="html/login.html"><input class="btn" type="button" value="Faça seu pedido"></a></div>
+    <div class="container">
+        <h1 class="titulo">
+            MAIS FÁCIL, EFICIENTE, RÁPIDO, E GOSTOSO!
+        </h1>
+        <a class="link" href="src/pages/login.html">
+            <input class="btn" type="button" value="Faça seu pedido">
+        </a>
+    </div>
 </body>
 </html>
