--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -15,14 +15,14 @@
     </header>
     <div class="wrapper">
         <div class="form-box login">
-            <h2>Login</h2>
-            <form action="#">
+            <h2 class="subtitulo">Login</h2>
+            <form class="form" action="pedido.html">
                 <div class="input-box email">
-                    <label>Email</label>
+                    <label class="form-label">Email</label>
                     <input type="email" required placeholder="Endereço de email">
                 </div>
                 <div class="input-box senha">
-                    <label>Senha</label>
+                    <label class="form-label">Senha</label>
                     <input type="password" required placeholder="123******">
                 </div>
                 <div class="submit-container">
@@ -31,40 +31,40 @@
                 </div>
                 <div class="register-noaccount">
                     <ipnut type="button" class="btn register">Cadastrar</ipnut>
-                    <a class="btn-no-account" href="#">Pedir sem conta</a>
+                    <a class="btn-no-account">Pedir sem conta</a>
                 </div>
             </form>
         </div>
 
         <div class="form-box noacc">
-            <h2>Vamos pedir?</h2>
-            <form action="#">
+            <h2 class="subtitulo">Vamos pedir?</h2>
+            <form class="form" action="pedido.html">
                 <div class="input-box email">
-                    <label>Informe seu nome</label>
+                    <label class="form-label">Informe seu nome</label>
                     <input type="text" required placeholder="Ex: José Almeida">
                 </div>
                 <div class="submit-container">
                     <button type="submit" class="btn-entrar"><a href="pedido.html">Fazer pedido</a></button>
                 </div>
                 <div class="register-noaccount">
-                    <ipnut type="button" class="btn voltar"><img class="arrow" src="../img/back.png" alt=""> Voltar</ipnut>
+                    <ipnut type="button" class="btn voltar"><img class="arrow" src="../../assets/back.png" alt=""> Voltar</ipnut>
                 </div>
             </form>
         </div>
 
         <div class="form-box register">
             <h2 class="subtitulo">Cadastro</h2>
-            <form action="#">
+            <form class="form" action="#">
                 <div class="input-box user">
-                    <label>Nome</label>
+                    <label class="form-label">Nome</label>
                     <input type="text" required placeholder="Nome de usuário">
                 </div>
                 <div class="input-box email">
-                    <label>Email</label>
+                    <label class="form-label">Email</label>
                     <input type="email" required placeholder="Endereço de email">
                 </div>
                 <div class="input-box senha">
-                    <label>Senha</label>
+                    <label class="form-label">Senha</label>
                     <input type="password" required placeholder="123******">
                 </div>
                 <div class="submit-container">
