adicionei scroll nas comidas

--- a/src/pages/pedido.html
+++ b/src/pages/pedido.html
@@ -23,7 +23,78 @@
         </ul>
       </div>
 
-      
+      <div class="comidas-container">
+        <div class="prato-container">
+            <h1 class="prato">Pizza de calabresa</h1>
+            <div class="check-container">
+                <p class="preço">35,00R$</p>
+                <input type="checkbox" name="check" id="check">
+            </div>
+        </div>
+        <div class="prato-container">
+            <h1 class="prato">Pizza de mussarela</h1>
+            <div class="check-container">
+                <p class="preço">35,00R$</p>
+                <input type="checkbox" name="check" id="check">
+            </div>
+        </div>
+        <div class="prato-container">
+            <h1 class="prato">Hambúrguer cheddar</h1>
+            <div class="check-container">
+                <p class="preço">25,00R$</p>
+                <input type="checkbox" name="check" id="check">
+            </div>
+        </div>
+        <div class="prato-container">
+            <h1 class="prato">Kalzone de frango</h1>
+            <div class="check-container">
+                <p class="preço">20,00R$</p>
+                <input type="checkbox" name="check" id="check">
+            </div>
+        </div>
+        <div class="prato-container">
+            <h1 class="prato">Kalzone 4 queijos</h1>
+            <div class="check-container">
+                <p class="preço">20,00R$</p>
+                <input type="checkbox" name="check" id="check">
+            </div>
+        </div>
+        <div class="prato-container">
+            <h1 class="prato">Misto</h1>
+            <div class="check-container">
+                <p class="preço">7,00R$</p>
+                <input type="checkbox" name="check" id="check">
+            </div>
+        </div>
+        <div class="prato-container">
+            <h1 class="prato">Kalzone 4 queijos</h1>
+            <div class="check-container">
+                <p class="preço">20,00R$</p>
+                <input type="checkbox" name="check" id="check">
+            </div>
+        </div>
+        <div class="prato-container">
+            <h1 class="prato">Misto</h1>
+            <div class="check-container">
+                <p class="preço">7,00R$</p>
+                <input type="checkbox" name="check" id="check">
+            </div>
+        </div>
+        <div class="prato-container">
+            <h1 class="prato">Kalzone 4 queijos</h1>
+            <div class="check-container">
+                <p class="preço">20,00R$</p>
+                <input type="checkbox" name="check" id="check">
+            </div>
+        </div>
+        <div class="prato-container">
+            <h1 class="prato">Misto</h1>
+            <div class="check-container">
+                <p class="preço">7,00R$</p>
+                <input type="checkbox" name="check" id="check">
+            </div>
+        </div>
+      </div>
 
     <div class="observation">
         <div class="container">
