estilizando a parte de baixo da tela de pedidos

--- a/src/pages/pedido.html
+++ b/src/pages/pedido.html
@@ -34,82 +34,82 @@
         <div class="prato-container">
             <h1 class="prato">Pizza de mussarela</h1>
             <div class="check-container">
-                <p class="preço">35,00R$</p>
+                <p class="preço">35,00<span>R$</span></p>
                 <input type="checkbox" name="check" id="check">
             </div>
         </div>
         <div class="prato-container">
             <h1 class="prato">Hambúrguer cheddar</h1>
             <div class="check-container">
-                <p class="preço">25,00R$</p>
+                <p class="preço">25,00<span>R$</span></p>
                 <input type="checkbox" name="check" id="check">
             </div>
         </div>
         <div class="prato-container">
             <h1 class="prato">Kalzone de frango</h1>
             <div class="check-container">
-                <p class="preço">20,00R$</p>
+                <p class="preço">20,00<span>R$</span></p>
                 <input type="checkbox" name="check" id="check">
             </div>
         </div>
         <div class="prato-container">
             <h1 class="prato">Kalzone 4 queijos</h1>
             <div class="check-container">
-                <p class="preço">20,00R$</p>
+                <p class="preço">20,00<span>R$</span></p>
                 <input type="checkbox" name="check" id="check">
             </div>
         </div>
         <div class="prato-container">
             <h1 class="prato">Misto</h1>
             <div class="check-container">
-                <p class="preço">7,00R$</p>
+                <p class="preço">7,00<span>R$</span></p>
                 <input type="checkbox" name="check" id="check">
             </div>
         </div>
         <div class="prato-container">
             <h1 class="prato">Kalzone 4 queijos</h1>
             <div class="check-container">
-                <p class="preço">20,00R$</p>
+                <p class="preço">20,00<span>R$</span></p>
                 <input type="checkbox" name="check" id="check">
             </div>
         </div>
         <div class="prato-container">
             <h1 class="prato">Misto</h1>
             <div class="check-container">
-                <p class="preço">7,00R$</p>
+                <p class="preço">7,00<span>R$</span></p>
                 <input type="checkbox" name="check" id="check">
             </div>
         </div>
         <div class="prato-container">
             <h1 class="prato">Kalzone 4 queijos</h1>
             <div class="check-container">
-                <p class="preço">20,00R$</p>
+                <p class="preço">20,00<span>R$</span></p>
                 <input type="checkbox" name="check" id="check">
             </div>
         </div>
         <div class="prato-container">
             <h1 class="prato">Misto</h1>
             <div class="check-container">
-                <p class="preço">7,00R$</p>
+                <p class="preço">7,00<span>R$</span></p>
                 <input type="checkbox" name="check" id="check">
             </div>
         </div>
       </div>
 
     <div class="observation">
-        <div class="container">
-            <img src="" alt="">
+        <div class="obs-container">
+            <img src="../../assets/obs.svg" alt="">
             <h1>Tem alguma observação?</h1>
         </div>
         <textarea name="Obs" class="obs-textarea" cols="30" rows="10" placeholder="Ex: sem cebola, sal a gosto, carne mal passada."></textarea>
     </div>
 
-    <div>
-        <h1>Total a pagar:</h1>
-        <p>R$ 25,00</p>
+    <div class="payment-container">
+        <h1 class="payment-title">Total a pagar:</h1>
+        <p class="total">R$ 25,00</p>
     </div>
 
-    <button>Concluir pedido</button>
+    <button class="btn-send">Concluir pedido</button>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="../js/swiper.js"></script>
