--- a/src/pages/pedido.html
+++ b/src/pages/pedido.html
@@ -25,74 +25,104 @@
 
       <div class="comidas-container">
         <div class="prato-container">
-            <h1 class="prato">Pizza de calabresa</h1>
             <div class="check-container">
-                <p class="preço">35,00R$</p>
-                <input type="checkbox" name="check" id="check">
+                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Pizza de calabresa</h1>
+                    <p class="preço">35,00R$</p>
+                </div>
             </div>
+            <input type="checkbox" name="check" id="check">
         </div>
         <div class="prato-container">
-            <h1 class="prato">Pizza de mussarela</h1>
             <div class="check-container">
-                <p class="preço">35,00<span>R$</span></p>
-                <input type="checkbox" name="check" id="check">
+                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Pizza de calabresa</h1>
+                    <p class="preço">35,00R$</p>
+                </div>
             </div>
+            <input type="checkbox" name="check" id="check">
         </div>
         <div class="prato-container">
-            <h1 class="prato">Hambúrguer cheddar</h1>
             <div class="check-container">
-                <p class="preço">25,00<span>R$</span></p>
-                <input type="checkbox" name="check" id="check">
+                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Pizza de calabresa</h1>
+                    <p class="preço">35,00R$</p>
+                </div>
             </div>
+            <input type="checkbox" name="check" id="check">
         </div>
         <div class="prato-container">
-            <h1 class="prato">Kalzone de frango</h1>
             <div class="check-container">
-                <p class="preço">20,00<span>R$</span></p>
-                <input type="checkbox" name="check" id="check">
+                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Pizza de calabresa</h1>
+                    <p class="preço">35,00R$</p>
+                </div>
             </div>
+            <input type="checkbox" name="check" id="check">
         </div>
         <div class="prato-container">
-            <h1 class="prato">Kalzone 4 queijos</h1>
             <div class="check-container">
-                <p class="preço">20,00<span>R$</span></p>
-                <input type="checkbox" name="check" id="check">
+                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Pizza de calabresa</h1>
+                    <p class="preço">35,00R$</p>
+                </div>
             </div>
+            <input type="checkbox" name="check" id="check">
         </div>
         <div class="prato-container">
-            <h1 class="prato">Misto</h1>
             <div class="check-container">
-                <p class="preço">7,00<span>R$</span></p>
-                <input type="checkbox" name="check" id="check">
+                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Pizza de calabresa</h1>
+                    <p class="preço">35,00R$</p>
+                </div>
             </div>
+            <input type="checkbox" name="check" id="check">
         </div>
         <div class="prato-container">
-            <h1 class="prato">Kalzone 4 queijos</h1>
             <div class="check-container">
-                <p class="preço">20,00<span>R$</span></p>
-                <input type="checkbox" name="check" id="check">
+                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Pizza de calabresa</h1>
+                    <p class="preço">35,00R$</p>
+                </div>
             </div>
+            <input type="checkbox" name="check" id="check">
         </div>
         <div class="prato-container">
-            <h1 class="prato">Misto</h1>
             <div class="check-container">
-                <p class="preço">7,00<span>R$</span></p>
-                <input type="checkbox" name="check" id="check">
+                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Pizza de calabresa</h1>
+                    <p class="preço">35,00R$</p>
+                </div>
             </div>
+            <input type="checkbox" name="check" id="check">
         </div>
         <div class="prato-container">
-            <h1 class="prato">Kalzone 4 queijos</h1>
             <div class="check-container">
-                <p class="preço">20,00<span>R$</span></p>
-                <input type="checkbox" name="check" id="check">
+                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Pizza de calabresa</h1>
+                    <p class="preço">35,00R$</p>
+                </div>
             </div>
+            <input type="checkbox" name="check" id="check">
         </div>
         <div class="prato-container">
-            <h1 class="prato">Misto</h1>
             <div class="check-container">
-                <p class="preço">7,00<span>R$</span></p>
-                <input type="checkbox" name="check" id="check">
+                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Pizza de calabresa</h1>
+                    <p class="preço">35,00R$</p>
+                </div>
             </div>
+            <input type="checkbox" name="check" id="check">
         </div>
       </div>
 
