estilizando preco total

--- a/src/pages/pedido.html
+++ b/src/pages/pedido.html
@@ -11,7 +11,10 @@
 
 </head>
 <body>
-    <h1 class="category-title">Categorias</h1>
+    <div class="header">
+        <img src="../../assets/filter.svg" alt="">
+        <h1 class="category-title">Categorias</h1>
+    </div>
     <div class="swiper mySwiper">
         <ul class="swiper-wrapper">
           <li class="swiper-slide"><button class="category">Pizzas</button></li>
