estilos do checkbox

--- a/src/pages/pedido.html
+++ b/src/pages/pedido.html
@@ -35,7 +35,10 @@
                     <p class="preço">35,00R$</p>
                 </div>
             </div>
-            <input type="checkbox" name="check" id="check">
+            <div class="custom-checkbox">
+                <input id="checkbox-1" type="checkbox">
+                <label for="checkbox-1"></label>
+            </div>
         </div>
         <div class="prato-container">
             <div class="check-container">
@@ -45,7 +48,10 @@
                     <p class="preço">35,00R$</p>
                 </div>
             </div>
-            <input type="checkbox" name="check" id="check">
+            <div class="custom-checkbox">
+                <input id="checkbox-1" type="checkbox">
+                <label for="checkbox-1"></label>
+            </div>
         </div>
         <div class="prato-container">
             <div class="check-container">
@@ -55,7 +61,10 @@
                     <p class="preço">35,00R$</p>
                 </div>
             </div>
-            <input type="checkbox" name="check" id="check">
+            <div class="custom-checkbox">
+                <input id="checkbox-1" type="checkbox">
+                <label for="checkbox-1"></label>
+            </div>
         </div>
         <div class="prato-container">
             <div class="check-container">
@@ -65,7 +74,10 @@
                     <p class="preço">35,00R$</p>
                 </div>
             </div>
-            <input type="checkbox" name="check" id="check">
+            <div class="custom-checkbox">
+                <input id="checkbox-1" type="checkbox">
+                <label for="checkbox-1"></label>
+            </div>
         </div>
         <div class="prato-container">
             <div class="check-container">
@@ -75,7 +87,10 @@
                     <p class="preço">35,00R$</p>
                 </div>
             </div>
-            <input type="checkbox" name="check" id="check">
+            <div class="custom-checkbox">
+                <input id="checkbox-1" type="checkbox">
+                <label for="checkbox-1"></label>
+            </div>
         </div>
         <div class="prato-container">
             <div class="check-container">
@@ -85,7 +100,10 @@
                     <p class="preço">35,00R$</p>
                 </div>
             </div>
-            <input type="checkbox" name="check" id="check">
+            <div class="custom-checkbox">
+                <input id="checkbox-1" type="checkbox">
+                <label for="checkbox-1"></label>
+            </div>
         </div>
         <div class="prato-container">
             <div class="check-container">
@@ -95,7 +113,10 @@
                     <p class="preço">35,00R$</p>
                 </div>
             </div>
-            <input type="checkbox" name="check" id="check">
+            <div class="custom-checkbox">
+                <input id="checkbox-1" type="checkbox">
+                <label for="checkbox-1"></label>
+            </div>
         </div>
         <div class="prato-container">
             <div class="check-container">
@@ -105,7 +126,10 @@
                     <p class="preço">35,00R$</p>
                 </div>
             </div>
-            <input type="checkbox" name="check" id="check">
+            <div class="custom-checkbox">
+                <input id="checkbox-1" type="checkbox">
+                <label for="checkbox-1"></label>
+            </div>
         </div>
         <div class="prato-container">
             <div class="check-container">
@@ -115,7 +139,10 @@
                     <p class="preço">35,00R$</p>
                 </div>
             </div>
-            <input type="checkbox" name="check" id="check">
+            <div class="custom-checkbox">
+                <input id="checkbox-1" type="checkbox">
+                <label for="checkbox-1"></label>
+            </div>
         </div>
         <div class="prato-container">
             <div class="check-container">
@@ -125,7 +152,10 @@
                     <p class="preço">35,00R$</p>
                 </div>
             </div>
-            <input type="checkbox" name="check" id="check">
+            <div class="custom-checkbox">
+                <input id="checkbox-1" type="checkbox">
+                <label for="checkbox-1"></label>
+            </div>
         </div>
       </div>
 
