adicionei as fotos das comidas

--- a/src/pages/pedido.html
+++ b/src/pages/pedido.html
@@ -31,8 +31,8 @@
             <div class="check-container">
                 <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
                 <div class="comida-desc">
-                    <h1 class="prato">Pizza de calabresa</h1>
-                    <p class="preço">35,00R$</p>
+                    <h1 class="prato">Pizza de peperoni</h1>
+                    <p class="preço">29,90R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -42,10 +42,10 @@
         </div>
         <div class="prato-container">
             <div class="check-container">
-                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <img class="comida-img" src="../../assets/bolonhesa.jpg" alt="">
                 <div class="comida-desc">
-                    <h1 class="prato">Pizza de calabresa</h1>
-                    <p class="preço">35,00R$</p>
+                    <h1 class="prato">Lasanha à bolonhesa</h1>
+                    <p class="preço">25,90R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -55,10 +55,10 @@
         </div>
         <div class="prato-container">
             <div class="check-container">
-                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <img class="comida-img" src="../../assets/salada caprese.jpg" alt="">
                 <div class="comida-desc">
-                    <h1 class="prato">Pizza de calabresa</h1>
-                    <p class="preço">35,00R$</p>
+                    <h1 class="prato">Salada Caprese</h1>
+                    <p class="preço">15,99R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -68,10 +68,10 @@
         </div>
         <div class="prato-container">
             <div class="check-container">
-                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <img class="comida-img camarao" src="../../assets/camarão a baiana.jpg" alt="">
                 <div class="comida-desc">
-                    <h1 class="prato">Pizza de calabresa</h1>
-                    <p class="preço">35,00R$</p>
+                    <h1 class="prato">Camarão à baiana</h1>
+                    <p class="preço">35,99R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -81,10 +81,10 @@
         </div>
         <div class="prato-container">
             <div class="check-container">
-                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <img class="comida-img" src="../../assets/tiramisu.jpg" alt="">
                 <div class="comida-desc">
-                    <h1 class="prato">Pizza de calabresa</h1>
-                    <p class="preço">35,00R$</p>
+                    <h1 class="prato">Tiramisu</h1>
+                    <p class="preço">12,99R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -94,10 +94,10 @@
         </div>
         <div class="prato-container">
             <div class="check-container">
-                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <img class="comida-img" src="../../assets/risoto-com-cogumelos.avif" alt="">
                 <div class="comida-desc">
-                    <h1 class="prato">Pizza de calabresa</h1>
-                    <p class="preço">35,00R$</p>
+                    <h1 class="prato">Risoto de cogumelos</h1>
+                    <p class="preço">28,99R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -107,10 +107,10 @@
         </div>
         <div class="prato-container">
             <div class="check-container">
-                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <img class="comida-img" src="../../assets/bruschetta.jpg" alt="">
                 <div class="comida-desc">
-                    <h1 class="prato">Pizza de calabresa</h1>
-                    <p class="preço">35,00R$</p>
+                    <h1 class="prato">Bruschetta</h1>
+                    <p class="preço">9,99R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -120,10 +120,10 @@
         </div>
         <div class="prato-container">
             <div class="check-container">
-                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <img class="comida-img" src="../../assets/panna cotta.jpg" alt="">
                 <div class="comida-desc">
-                    <h1 class="prato">Pizza de calabresa</h1>
-                    <p class="preço">35,00R$</p>
+                    <h1 class="prato">Panna cotta</h1>
+                    <p class="preço">10,99R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -133,10 +133,10 @@
         </div>
         <div class="prato-container">
             <div class="check-container">
-                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <img class="comida-img" src="../../assets/salmão.jpg" alt="">
                 <div class="comida-desc">
-                    <h1 class="prato">Pizza de calabresa</h1>
-                    <p class="preço">35,00R$</p>
+                    <h1 class="prato">Salmão grelhado</h1>
+                    <p class="preço">32,99R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -146,10 +146,62 @@
         </div>
         <div class="prato-container">
             <div class="check-container">
-                <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
+                <img class="comida-img" src="../../assets/ceviche.png" alt="">
                 <div class="comida-desc">
-                    <h1 class="prato">Pizza de calabresa</h1>
-                    <p class="preço">35,00R$</p>
+                    <h1 class="prato">Ceviche</h1>
+                    <p class="preço">19,99R$</p>
+                </div>
+            </div>
+            <div class="custom-checkbox">
+                <input id="checkbox-10" type="checkbox">
+                <label for="checkbox-10"></label>
+            </div>
+        </div>
+        <div class="prato-container">
+            <div class="check-container">
+                <img class="comida-img" src="../../assets/mousse.avif" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Mousse de limão</h1>
+                    <p class="preço">8,99R$</p>
+                </div>
+            </div>
+            <div class="custom-checkbox">
+                <input id="checkbox-10" type="checkbox">
+                <label for="checkbox-10"></label>
+            </div>
+        </div>
+        <div class="prato-container">
+            <div class="check-container">
+                <img class="comida-img" src="../../assets/pudim.jpg" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Pudim de leite</h1>
+                    <p class="preço">7,99R$</p>
+                </div>
+            </div>
+            <div class="custom-checkbox">
+                <input id="checkbox-10" type="checkbox">
+                <label for="checkbox-10"></label>
+            </div>
+        </div>
+        <div class="prato-container">
+            <div class="check-container">
+                <img class="comida-img" src="../../assets/Salada-Caesar.png" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Salada caesar</h1>
+                    <p class="preço">16,99R$</p>
+                </div>
+            </div>
+            <div class="custom-checkbox">
+                <input id="checkbox-10" type="checkbox">
+                <label for="checkbox-10"></label>
+            </div>
+        </div>
+        <div class="prato-container">
+            <div class="check-container">
+                <img class="comida-img" src="../../assets/cheesecake.png" alt="">
+                <div class="comida-desc">
+                    <h1 class="prato">Cheesecake</h1>
+                    <p class="preço">11,99R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
