--- a/src/pages/pedido.html
+++ b/src/pages/pedido.html
@@ -17,11 +17,9 @@
     </div>
     <div class="swiper mySwiper">
         <ul class="swiper-wrapper">
-          <li class="swiper-slide"><button class="category">Pizzas</button></li>
-          <li class="swiper-slide"><button class="category">Coxinhas</button></li>
-          <li class="swiper-slide"><button class="category">Pastéis</button></li>
-          <li class="swiper-slide"><button class="category">Hambúrguers</button></li>
-          <li class="swiper-slide"><button class="category">Sushi's</button></li>
+          <li class="swiper-slide"><button class="category">Pratos principais</button></li>
+          <li class="swiper-slide"><button class="category">Sobremesas</button></li>
+          <li class="swiper-slide"><button class="category">Entradas</button></li>
           <li class="swiper-slide"><button class="category">Saladas</button></li>
         </ul>
       </div>
@@ -32,7 +30,7 @@
                 <img class="comida-img" src="../../assets/pizza-peperoni.jpg" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Pizza de peperoni</h1>
-                    <p class="preço">29,90R$</p>
+                    <p class="preço">29R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -45,7 +43,7 @@
                 <img class="comida-img" src="../../assets/bolonhesa.jpg" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Lasanha à bolonhesa</h1>
-                    <p class="preço">25,90R$</p>
+                    <p class="preço">25R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -58,7 +56,7 @@
                 <img class="comida-img" src="../../assets/salada caprese.jpg" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Salada Caprese</h1>
-                    <p class="preço">15,99R$</p>
+                    <p class="preço">15R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -71,7 +69,7 @@
                 <img class="comida-img camarao" src="../../assets/camarão a baiana.jpg" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Camarão à baiana</h1>
-                    <p class="preço">35,99R$</p>
+                    <p class="preço">35R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -84,7 +82,7 @@
                 <img class="comida-img" src="../../assets/tiramisu.jpg" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Tiramisu</h1>
-                    <p class="preço">12,99R$</p>
+                    <p class="preço">12R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -97,7 +95,7 @@
                 <img class="comida-img" src="../../assets/risoto-com-cogumelos.avif" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Risoto de cogumelos</h1>
-                    <p class="preço">28,99R$</p>
+                    <p class="preço">28R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -110,7 +108,7 @@
                 <img class="comida-img" src="../../assets/bruschetta.jpg" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Bruschetta</h1>
-                    <p class="preço">9,99R$</p>
+                    <p class="preço">9R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -123,7 +121,7 @@
                 <img class="comida-img" src="../../assets/panna cotta.jpg" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Panna cotta</h1>
-                    <p class="preço">10,99R$</p>
+                    <p class="preço">10R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -136,7 +134,7 @@
                 <img class="comida-img" src="../../assets/salmão.jpg" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Salmão grelhado</h1>
-                    <p class="preço">32,99R$</p>
+                    <p class="preço">32R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -149,7 +147,7 @@
                 <img class="comida-img" src="../../assets/ceviche.png" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Ceviche</h1>
-                    <p class="preço">19,99R$</p>
+                    <p class="preço">19R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
@@ -162,12 +160,12 @@
                 <img class="comida-img" src="../../assets/mousse.avif" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Mousse de limão</h1>
-                    <p class="preço">8,99R$</p>
+                    <p class="preço">8R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
-                <input id="checkbox-10" type="checkbox">
-                <label for="checkbox-10"></label>
+                <input id="checkbox-11" type="checkbox">
+                <label for="checkbox-11"></label>
             </div>
         </div>
         <div class="prato-container">
@@ -175,12 +173,12 @@
                 <img class="comida-img" src="../../assets/pudim.jpg" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Pudim de leite</h1>
-                    <p class="preço">7,99R$</p>
+                    <p class="preço">7R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
-                <input id="checkbox-10" type="checkbox">
-                <label for="checkbox-10"></label>
+                <input id="checkbox-12" type="checkbox">
+                <label for="checkbox-12"></label>
             </div>
         </div>
         <div class="prato-container">
@@ -188,12 +186,12 @@
                 <img class="comida-img" src="../../assets/Salada-Caesar.png" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Salada caesar</h1>
-                    <p class="preço">16,99R$</p>
+                    <p class="preço">16R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
-                <input id="checkbox-10" type="checkbox">
-                <label for="checkbox-10"></label>
+                <input id="checkbox-13" type="checkbox">
+                <label for="checkbox-13"></label>
             </div>
         </div>
         <div class="prato-container">
@@ -201,12 +199,12 @@
                 <img class="comida-img" src="../../assets/cheesecake.png" alt="">
                 <div class="comida-desc">
                     <h1 class="prato">Cheesecake</h1>
-                    <p class="preço">11,99R$</p>
+                    <p class="preço">11R$</p>
                 </div>
             </div>
             <div class="custom-checkbox">
-                <input id="checkbox-10" type="checkbox">
-                <label for="checkbox-10"></label>
+                <input id="checkbox-14" type="checkbox">
+                <label for="checkbox-14"></label>
             </div>
         </div>
       </div>
@@ -221,12 +219,13 @@
 
     <div class="payment-container">
         <h1 class="payment-title">Total a pagar:</h1>
-        <p class="total">R$ 25,00</p>
+        <p id="total">R$ <span id="number">0</span></p>
     </div>
 
     <button class="btn-send">Concluir pedido</button>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="../js/swiper.js"></script>
+    <script src="../../src/js/pedido.js"></script>
 </body>
 </html>
