--- a/src/pages/pedido.html
+++ b/src/pages/pedido.html
@@ -221,7 +221,7 @@
         <p id="total">R$ <span id="number">0</span></p>
     </div>
 
-    <a href="confirmação.html" class="btn-send"><button>Concluir pedido</button></a>
+    <a href="confirmação.html" class="link-send"><button class="btn-send">Concluir pedido</button></a>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="../js/swiper.js"></script>
