--- a/src/pages/confirmação.html
+++ b/src/pages/confirmação.html
@@ -13,7 +13,7 @@
             <img src="../../assets/check_circle_FILL0_wght400_GRAD0_opsz48 1 (1).png" alt="" width="250px" height="250px" style="background-color: #FF0000; border-radius: 50%;">
             <h1 style="font-size: 1.3rem; font-weight: bold;">Seu pedido foi enviado para a cozinha!</h1>
         </div>
-        <button style="width: 300px; height: 50px; margin-top: 20%; align-self: center; border: none; background-color: #FF0000; font-size: 1.2rem; font-weight: bold; color: #fff;">Voltar para a tela inicial</button>
+        <a href="pedido.html"><button style="width: 300px; height: 50px; margin-top: 20%; align-self: center; border: none; background-color: #FF0000; font-size: 1.2rem; font-weight: bold; color: #fff; border-radius: 5px;">Voltar para o menu</button></a>
     </div>
 </body>
 </html>
